[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/spawner.gd" type="Script" id=1]
[ext_resource path="res://scripts/void.gd" type="Script" id=2]
[ext_resource path="res://sprites/sprite_planet.png" type="Texture" id=3]
[ext_resource path="res://scripts/camera.gd" type="Script" id=4]
[ext_resource path="res://scripts/button.gd" type="Script" id=5]
[ext_resource path="res://sprites/sprite_pause.png" type="Texture" id=6]
[ext_resource path="res://sprites/sprite_triangle.png" type="Texture" id=7]
[ext_resource path="res://scripts/button_reset.gd" type="Script" id=8]
[ext_resource path="res://sprites/sprite_exit.png" type="Texture" id=9]
[ext_resource path="res://scripts/button_sound.gd" type="Script" id=10]
[ext_resource path="res://sprites/sprite_sound.png" type="Texture" id=11]
[ext_resource path="res://scenes/button_customize.gd" type="Script" id=12]
[ext_resource path="res://sprites/sprite_costumize.png" type="Texture" id=13]
[ext_resource path="res://fonts/rubik.tres" type="DynamicFont" id=14]
[ext_resource path="res://scripts/fade.gd" type="Script" id=15]
[ext_resource path="res://fonts/small_rubik.tres" type="DynamicFont" id=16]
[ext_resource path="res://scenes/colorpicker_label.gd" type="Script" id=17]
[ext_resource path="res://scripts/trail.gd" type="Script" id=18]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "customize"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("colorpicker_background:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -460, 90 ), Vector2( 140, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("colorpicker_planets_colonized:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -460, 980 ), Vector2( 140, 980 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("colorpicker_planets_uncolonized:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -460, 540 ), Vector2( 140, 540 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("colorpicker_shuttle:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1180, 90 ), Vector2( 570, 90 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("colorpicker_trail:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1180, 540 ), Vector2( 570, 540 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("colorpicker_void:rect_position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.25, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1180, 980 ), Vector2( 570, 980 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("button_reset:rect_position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 92, 1252 ), Vector2( 92, 2092 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("button_sound:rect_position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 732, 1252 ), Vector2( 732, 2092 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("button_customize:rect_position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 412, 1256 ), Vector2( 360, 1466 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("button_customize:rect_size")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 256 ), Vector2( 360, 360 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("button_pause:rect_position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 360 ), Vector2( 360, -1210 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("highscore_menu:rect_position")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 180, 820 ), Vector2( 180, -260 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("container_highscore:rect_position")
tracks/12/interp = 2
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 1076 ), Vector2( 540, -324 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("button_customize/sprite:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.5625, 0.5625 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("button_customize/sprite:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 128 ), Vector2( 180, 180 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("button_pause:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 64 ), Vector2( 360, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button_pause:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 160 ), Vector2( 360, 360 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("button_reset:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 92, 2220 ), Vector2( 92, 1252 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("button_sound:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 732, 2212 ), Vector2( 732, 1252 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("button_customize:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 412, 2216 ), Vector2( 412, 1256 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("highscore_menu:rect_position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1240, 820 ), Vector2( 180, 820 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("credit:rect_position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 300, -120 ), Vector2( 300, 40 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("container_highscore:rect_position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 256 ), Vector2( 540, 1076 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("container_score:rect_position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 144 ), Vector2( 540, -74 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("button_pause/sprite_pause:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("button_pause/sprite_play:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("button_pause/sprite_play:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 80 ), Vector2( 182, 182 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("button_pause/sprite_play:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.12, 0.12 ), Vector2( 0.24, 0.24 ) ]
}

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="void" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="void"]
scale = Vector2( 0.15, 0.15 )
z_index = 1
texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="void"]
scale = Vector2( 4, 4 )
z_index = 1
shape = SubResource( 1 )

[node name="camera" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 4 )

[node name="canvas" type="CanvasLayer" parent="."]
offset = Vector2( 0, 1080 )
rotation = -1.5708
transform = Transform2D( -4.37114e-008, -1, 1, -4.37114e-008, 0, 1080 )

[node name="animation" type="AnimationPlayer" parent="canvas"]
pause_mode = 2
anims/customize = SubResource( 2 )
anims/pause = SubResource( 3 )

[node name="button_pause" type="Button" parent="canvas"]
pause_mode = 2
editor/display_folded = true
margin_left = 64.0
margin_top = 64.0
margin_right = 224.0
margin_bottom = 224.0
script = ExtResource( 5 )

[node name="sprite_pause" type="Sprite" parent="canvas/button_pause"]
position = Vector2( 80, 80 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="sprite_play" type="Sprite" parent="canvas/button_pause"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 72, 80 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="button_reset" type="Button" parent="canvas"]
pause_mode = 2
editor/display_folded = true
margin_left = 92.0
margin_top = 2220.0
margin_right = 348.0
margin_bottom = 2476.0
script = ExtResource( 8 )

[node name="sprite" type="Sprite" parent="canvas/button_reset"]
position = Vector2( 128, 128 )
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 9 )

[node name="button_sound" type="Button" parent="canvas"]
pause_mode = 2
editor/display_folded = true
margin_left = 732.0
margin_top = 2212.0
margin_right = 988.0
margin_bottom = 2467.0
script = ExtResource( 10 )

[node name="sprite" type="Sprite" parent="canvas/button_sound"]
position = Vector2( 128, 128 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )

[node name="button_customize" type="Button" parent="canvas"]
pause_mode = 2
margin_left = 412.0
margin_top = 2216.0
margin_right = 668.0
margin_bottom = 2472.0
script = ExtResource( 12 )

[node name="sprite" type="Sprite" parent="canvas/button_customize"]
position = Vector2( 128, 128 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 13 )

[node name="container_highscore" type="CenterContainer" parent="canvas"]
editor/display_folded = true
margin_left = 540.0
margin_top = 256.0
margin_right = 1059.0
margin_bottom = 408.0
use_top_left = true

[node name="highscore" type="Label" parent="canvas/container_highscore"]
margin_left = -41.0
margin_top = -76.0
margin_right = 40.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 14 )
text = "0"
align = 1
valign = 1

[node name="container_score" type="CenterContainer" parent="canvas"]
editor/display_folded = true
anchor_bottom = 1.0
margin_left = 540.0
margin_top = 144.0
margin_right = 540.0
margin_bottom = -604.0
use_top_left = true

[node name="score" type="Label" parent="canvas/container_score"]
margin_left = -41.0
margin_top = -76.0
margin_right = 40.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 14 )
text = "0"
align = 1
max_lines_visible = 1

[node name="credit" type="Label" parent="canvas"]
margin_left = 300.0
margin_top = -120.0
margin_right = 780.0
margin_bottom = -106.0
text = "Created by Dvir David Biton using the Godot Game Engine, 2018"
align = 1
valign = 1

[node name="highscore_menu" type="Label" parent="canvas"]
margin_left = 1240.0
margin_top = 820.0
margin_right = 1966.0
margin_bottom = 1127.0
custom_fonts/font = ExtResource( 14 )
text = "HIGHSCORE
"
align = 1
valign = 1

[node name="fade" type="Node2D" parent="canvas"]
script = ExtResource( 15 )

[node name="colorpicker_background" type="ColorPickerButton" parent="canvas"]
pause_mode = 2
margin_left = -460.0
margin_top = 90.0
margin_right = -100.0
margin_bottom = 450.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="label" type="Label" parent="canvas/colorpicker_background"]
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = -250.0
margin_top = 160.0
margin_right = 607.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 16 )
text = "BACKGROUND"
align = 1
script = ExtResource( 17 )

[node name="colorpicker_planets_uncolonized" type="ColorPickerButton" parent="canvas"]
pause_mode = 2
margin_left = -460.0
margin_top = 540.0
margin_right = -100.0
margin_bottom = 900.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="label" type="Label" parent="canvas/colorpicker_planets_uncolonized"]
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = -250.0
margin_top = 160.0
margin_right = 607.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 16 )
text = "UNCOLONIZEE PLANETS"
align = 1
script = ExtResource( 17 )

[node name="colorpicker_planets_colonized" type="ColorPickerButton" parent="canvas"]
pause_mode = 2
margin_left = -460.0
margin_top = 980.0
margin_right = -100.0
margin_bottom = 1340.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="label" type="Label" parent="canvas/colorpicker_planets_colonized"]
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = -250.0
margin_top = 160.0
margin_right = 607.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 16 )
text = "COLONIZED PLANET"
align = 1
script = ExtResource( 17 )

[node name="colorpicker_shuttle" type="ColorPickerButton" parent="canvas"]
pause_mode = 2
margin_left = 1180.0
margin_top = 90.0
margin_right = 1540.0
margin_bottom = 450.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="label" type="Label" parent="canvas/colorpicker_shuttle"]
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = -250.0
margin_top = 160.0
margin_right = 607.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 16 )
text = "SHUTTLE"
align = 1
script = ExtResource( 17 )

[node name="colorpicker_trail" type="ColorPickerButton" parent="canvas"]
pause_mode = 2
margin_left = 1180.0
margin_top = 540.0
margin_right = 1540.0
margin_bottom = 900.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="label" type="Label" parent="canvas/colorpicker_trail"]
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = -250.0
margin_top = 160.0
margin_right = 607.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 16 )
text = "TRAIL"
align = 1
script = ExtResource( 17 )

[node name="colorpicker_void" type="ColorPickerButton" parent="canvas"]
pause_mode = 2
margin_left = 1180.0
margin_top = 980.0
margin_right = 1540.0
margin_bottom = 1340.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="label" type="Label" parent="canvas/colorpicker_void"]
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = -250.0
margin_top = 160.0
margin_right = 607.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 16 )
text = "VOID"
align = 1
script = ExtResource( 17 )

[node name="sound_player" type="AudioStreamPlayer" parent="."]

[node name="trail" type="Line2D" parent="."]
points = PoolVector2Array( 548.789, 1344.7 )
gradient = SubResource( 4 )
texture_mode = 559743056
script = ExtResource( 18 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 3 )

[connection signal="animation_started" from="canvas/animation" to="canvas/button_reset" method="_on_animation_animation_started"]
[connection signal="color_changed" from="canvas/colorpicker_background" to="canvas/colorpicker_background/label" method="_on_colorpicker_background_color_changed"]
[connection signal="color_changed" from="canvas/colorpicker_background" to="." method="_on_colorpicker_background_color_changed"]
[connection signal="button_down" from="canvas/colorpicker_planets_uncolonized" to="." method="_on_colorpicker_planets_uncolonized_button_down"]
[connection signal="color_changed" from="canvas/colorpicker_planets_uncolonized" to="." method="_on_colorpicker_planets_uncolonized_color_changed"]
[connection signal="button_down" from="canvas/colorpicker_planets_colonized" to="." method="_on_colorpicker_planets_colonized_button_down"]
[connection signal="color_changed" from="canvas/colorpicker_planets_colonized" to="." method="_on_colorpicker_planets_colonized_color_changed"]
[connection signal="color_changed" from="canvas/colorpicker_shuttle" to="." method="_on_colorpicker_shuttle_color_changed"]
[connection signal="color_changed" from="canvas/colorpicker_trail" to="." method="_on_colorpicker_trail_color_changed"]
[connection signal="color_changed" from="canvas/colorpicker_void" to="." method="_on_colorpicker_void_color_changed"]
